[project]
  name = "airlock"
  version = "0.1.0"
  description = "Airlock"
  readme = "README.md"
  requires-python = ">=3.11,<3.12"
  
  dependencies = [
    "ansi2html<=1.9.2",
    "Django<=5.2.13",
    "django-vite<=3.1.0",
    "slippers<=0.7.0",
    "django-htmx<=1.27.0",
    "django-markdownify<=0.9.6",
    "whitenoise<=6.12.0",
    "gunicorn<=25.3.0",
    "opensafely-pipeline@https://github.com/opensafely-core/pipeline/archive/refs/tags/v2026.03.12.140752.zip",
    "requests<=2.33.1",
    "pydantic<=2.13.0",
    "ulid<=1.1",
    "opentelemetry-exporter-otlp-proto-http<=1.41.0",
    "opentelemetry-instrumentation-django<=0.61b0",
    "opentelemetry-instrumentation-requests<=0.61b0",
    "opentelemetry-sdk<=1.41.0",
    # docs
    "mkdocs<=1.6.1",
    "mkdocs-material<=9.7.6",
    "django-extensions<=4.1",
]

[tool.ruff]
# Exclude upstream assets files from jobserver
exclude = [
  "assets/templates/*",
  "assets/base_views.py"
]

[tool.ruff.lint]
# See: https://docs.astral.sh/ruff/rules/
extend-select = [
  "A", # prevent shadowing builtins
  "COM818", # no trailing commas on bare tuples
  "I",  # isort
  "INP",  # no implicit namespace packages
  "UP",  # pyupgrade
  "W",  # pycodestyle warning
]
extend-ignore = [
  "A005", # ignore stdlib-module-shadowing 
  "E501", # ignore line length
]
isort.lines-after-imports = 2

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "airlock.settings"
testpaths = [
   "tests"
]
filterwarnings = [
    "ignore::DeprecationWarning:opentelemetry.*:",
    "ignore::DeprecationWarning:pytest_freezegun.*:",
]

[tool.coverage.run]
branch = true
patch = ["subprocess"]
# Required to get full coverage when using Playwright
concurrency = ["greenlet", "thread"]
plugins = ["django_coverage_plugin"]
omit = [
  "*/assets/*",
  "airlock/lib/git.py",
  "airlock/management/commands/statemachine.py",
  "tests/functional/test_docs_screenshots.py",
]


[tool.coverage.report]
fail_under = 100
skip_covered = true
exclude_also = [
    # this indicates that the line should never be hit
    "assert False",
    # this condition is only true when a module is run as a script
    'if __name__ == "__main__":',
    # this indicates that a method should be defined in a subclass
    "raise NotImplementedError",
]

[tool.coverage.django_coverage_plugin]
template_extensions = "html"
exclude_blocks = [
    # exclude block lines for end of slippers component (blocks that 
    # start with \ e.g. {% \button %}
    "^\\/\\w+",
]

[tool.ruff.lint.per-file-ignores]
"airlock/views/__init__.py" = ["F401"]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
disallow_any_generics = true
no_implicit_reexport = true
warn_return_any = true
check_untyped_defs = true
mypy_path = "stubs"
exclude = [
   "airlock/lib/git.py",
]

# Don't follow the import chain into the modules containing code vendored from elsewhere
[[tool.mypy.overrides]]
module = "assets.base_views"
follow_imports = "skip"
[[tool.mypy.overrides]]
module = "services.tracing"
follow_imports = "skip"
[[tool.mypy.overrides]]
module = "airlock.lib.git"
follow_imports = "skip"


[tool.django-stubs]
django_settings_module = "airlock.settings"


[tool.uv]
required-version = ">=0.9"


[dependency-groups]
dev = [
    "django-debug-toolbar<=6.2.0",
    "django-debug-toolbar-template-profiler<=2.1.0",
    "djhtml<=3.0.11",
    "httpx<=0.28.1",
    "hypothesis<=6.151.10",
    "ruff<=0.15.8",
    "playwright<=1.58.0",
    "pytest<=9.0.3",
    "pytest-cov<=7.1.0",
    "pytest-django<=4.12.0",
    "pytest-freezer<=0.4.9",
    "pytest-playwright<=0.7.2",
    "responses<=0.26.0",
    # Currently using our fork of django_coverage_plugin, pending
    # upstream PR https://github.com/nedbat/django_coverage_plugin/pull/93
    "django_coverage_plugin@https://github.com/opensafely-core/django_coverage_plugin/archive/75209df74c37178666868abbd9687a41aaba0e13.zip",
    # Type-checking and type stubs
    "mypy<=1.20.0",
    "django-stubs[compatible-mypy]<=6.0.2",
    "types-requests<=2.33.0.20260327",
]
